Added Context, dev, shape, structure, styleguide and text styling

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "~15.4.0-rc.4",
     "react-native": "0.41.1",
     "react-native-modal-dropdown": "^0.4.1",
-    "react-native-router-flux": "^3.37.0"
+    "react-native-router-flux": "^3.37.0",
+    "react-native-vector-icons": "^4.0.0",
+    "tinycolor": "0.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
