--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "minutes-seconds-milliseconds": "^1.0.3",
+    "native-base": "^2.0.10",
     "react": "~15.4.0-rc.4",
     "react-native": "0.41.1",
     "react-native-modal-dropdown": "^0.4.1",
     "react-native-router-flux": "^3.37.0",
-    "react-native-vector-icons": "^4.0.0",
-    "tinycolor": "0.0.1"
+    "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
@@ -25,5 +25,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./node_modules/native-base/Fonts/Ionicons.ttf"
+    ]
   }
 }
