--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "minutes-seconds-milliseconds": "^1.0.3",
-    "native-base": "^2.0.10",
+    "native-base": "^2.1.1",
+    "native-structure": "^1.1.2",
     "react": "~15.4.0-rc.4",
     "react-native": "0.41.1",
     "react-native-modal-dropdown": "^0.4.1",
